--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
+    <h1> Hellooo</h1>
   </head>
   <body>
     <div id="root"></div>
