--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/f9eb7bc24d.js" crossorigin="anonymous"></script>
-
-   
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Luckiest+Guy&family=Pacifico&family=Righteous&display=swap" rel="stylesheet">   
   </head>
   <body>
     <header>
@@ -21,9 +20,9 @@
     </header>
     
     <div class="pokedex_header">
-      <form>
-        <input type="text">
-        <button><img src="/images/pokebola01.png"></button>
+      <form id="buscarPokemon">
+        <input type="text" id="pokemonBuscado">
+        <button type="submit"><img src="/images/pokebola01.png"></button>
       </form>
       
     </div>
