ordenar tarjetas alfabeticamente

--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
 
     <nav class="navoption">
       <div>
-        <i class="fa-solid fa-filter"> Filtrar</i>
+        <i class="fa-solid fa-filter" id="filtrarPokemones"> Filtrar</i>
       </div>
       <div>
-        <i class="fa-solid fa-arrow-up-a-z"> Ordenar A-Z </i>
+        <i class="fa-solid fa-arrow-up-a-z" id="ordenAscend"> Ordenar A-Z </i>
       </div>
       <div>
-        <i class="fa-solid fa-arrow-up-z-a"> Ordenar Z-A</i>
+        <i class="fa-solid fa-arrow-up-z-a" id="ordenDescen"> Ordenar Z-A</i>
       </div>
     </nav>
     
