--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
     </header>
     
     <div class="pokedex_header">
-      <form id="buscarPokemon">
-        <input type="text" id="pokemonBuscado">
-        <button type="submit"><img src="/images/pokebola01.png"></button>
+      <form id="formSearchPokemon">
+        <input type="text" id="searchPokemon">
+        <button type="button" id="btnSearch"><img src="/images/pokebola01.png"></button>
       </form>
       
     </div>
