--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,26 @@
     <nav class="navoption">
       <div>
         <i class="fa-solid fa-filter" id="filtrarPokemones"> Filtrar</i>
+        <ul>
+          <li id="btntype" class="btntype">Tipo</li>
+           <li class="filtertype"><a href="" class=""></a></li>
+           <li class="filtertype">normal</li>
+           <li class="filtertype">fire</li>
+           <li class="filtertype">water</li>
+           <li class="filtertype">ice</li>
+           <li class="filtertype">rock</li>
+           <li class="filtertype">flying</li>
+           <li class="filtertype">grass</li>
+           <li class="filtertype">psychic</li>
+           <li class="filtertype">ghost</li>
+           <li class="filtertype">bug</li>
+           <li class="filtertype">poison</li>
+           <li class="filtertype">ground</li>
+           <li class="filtertype">dragon</li>
+           <li class="filtertype">steel</li>
+           <li class="filtertype">fighting</li>
+           
+        </ul>
       </div>
       <div>
         <i class="fa-solid fa-arrow-up-a-z" id="ordenAscend"> Ordenar A-Z </i>
