--- a/src/index.html
+++ b/src/index.html
@@ -30,26 +30,26 @@
 
     <nav class="navoption">
       <div>
-        <i class="fa-solid fa-filter" id="filtrarPokemones"> Filtrar</i>
-        <ul>
-          <li id="btntype" class="btntype">Tipo</li>
-           <li class="filtertype"><a href="" class=""></a></li>
-           <li class="filtertype">normal</li>
-           <li class="filtertype">fire</li>
-           <li class="filtertype">water</li>
-           <li class="filtertype">ice</li>
-           <li class="filtertype">rock</li>
-           <li class="filtertype">flying</li>
-           <li class="filtertype">grass</li>
-           <li class="filtertype">psychic</li>
-           <li class="filtertype">ghost</li>
-           <li class="filtertype">bug</li>
-           <li class="filtertype">poison</li>
-           <li class="filtertype">ground</li>
-           <li class="filtertype">dragon</li>
-           <li class="filtertype">steel</li>
-           <li class="filtertype">fighting</li>
-           
+        <i class="fa-solid fa-filter" id="filtrarPokemonesBtn"> Filtrar</i>
+        <ul class="btntype" id="btntype">
+          <li class="btntypecontainer">Tipo <i class="fa-solid fa-angle-down"></i></li>
+             <lu class="submenu">  
+                <li class="filtertype"><a href="" class="filterlink"></a>normal</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>fire</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>water</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>ice</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>rock</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>flying</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>grass</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>psychic</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>ghost</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>bug</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>poison</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>ground</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>dragon</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>steel</li>
+                <li class="filtertype"><a href="" class="filterlink"></a>fighting</li>
+             </lu>
         </ul>
       </div>
       <div>
