se logro hacer el style para filtrado

--- a/src/index.html
+++ b/src/index.html
@@ -23,34 +23,34 @@
 
       <form id="formSearchPokemon">
         <input type="text" id="searchPokemon">
-        <button type="button" id="btnSearch"><img src="/images/pokebola01.png"></button>
+        <button type="button" id="btnSearch" ><img src="/images/pokebola01.png"></button>
       </form>
       
     </div>
 
     <nav class="navoption">
       <div>
-        <i class="fa-solid fa-filter" id="filtrarPokemonesBtn"> Filtrar</i>
-        <ul class="btntype" id="btntype">
-          <li class="btntypecontainer">Tipo <i class="fa-solid fa-angle-down"></i></li>
-             <lu class="submenu">  
-                <li class="filtertype"><a href="" class="filterlink"></a>normal</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>fire</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>water</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>ice</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>rock</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>flying</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>grass</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>psychic</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>ghost</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>bug</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>poison</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>ground</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>dragon</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>steel</li>
-                <li class="filtertype"><a href="" class="filterlink"></a>fighting</li>
-             </lu>
-        </ul>
+        <ul>
+           <li id="filtrarPokemonesBtn"><i class="fa-solid fa-filter" > Filtrar <i class="fa-solid fa-angle-down"></i></i> </li>
+              <ul class="submenu" id="submenu">  
+                  <li class="filtertype"><a href="" id="electrico">electrico</a></li>
+                  <li class="filtertype"><a href="" id="normal">normal</a></li>
+                  <li class="filtertype"><a href="" id="fuego">fuego</a></li>
+                  <li class="filtertype"><a href="" id="agua">agua</a></li>
+                  <li class="filtertype"><a href="" id="hielo">hielo</a></li>
+                  <li class="filtertype"><a href="" id="roca">roca</a></li>
+                  <li class="filtertype"><a href="" id="volador">volador</a></li>
+                  <li class="filtertype"><a href="" id="planta">planta</a></li>
+                  <li class="filtertype"><a href="" id="psiquico">psiquico</a></li>
+                  <li class="filtertype"><a href="" id="fanstasma">fanstasma</a></li>
+                  <li class="filtertype"><a href="" id="bicho">bicho</a></li>
+                  <li class="filtertype"><a href="" id="veneno">veneno</a></li>
+                  <li class="filtertype"><a href="" id="hada">hada</a></li>
+                  <li class="filtertype"><a href="" id="dragon">dragon</adragon</li>
+                  <li class="filtertype"><a href="" id="acero">acero</a></li>
+                  <li class="filtertype"><a href="" id="lucha">lucha</a></li>
+              </ul>
+         </ul>
       </div>
       <div>
         <i class="fa-solid fa-arrow-up-a-z" id="ordenAscend"> Ordenar A-Z </i>
