--- a/src/index.html
+++ b/src/index.html
@@ -33,22 +33,22 @@
         <ul>
            <li id="filtrarPokemonesBtn"><i class="fa-solid fa-filter" > Filtrar <i class="fa-solid fa-angle-down"></i></i> </li>
               <ul class="submenu" id="submenu">  
-                  <li class="filtertype"><a href="" id="electrico">electrico</a></li>
-                  <li class="filtertype"><a href="" id="normal">normal</a></li>
-                  <li class="filtertype"><a href="" id="fuego">fuego</a></li>
-                  <li class="filtertype"><a href="" id="agua">agua</a></li>
-                  <li class="filtertype"><a href="" id="hielo">hielo</a></li>
-                  <li class="filtertype"><a href="" id="roca">roca</a></li>
-                  <li class="filtertype"><a href="" id="volador">volador</a></li>
-                  <li class="filtertype"><a href="" id="planta">planta</a></li>
-                  <li class="filtertype"><a href="" id="psiquico">psiquico</a></li>
-                  <li class="filtertype"><a href="" id="fanstasma">fanstasma</a></li>
-                  <li class="filtertype"><a href="" id="bicho">bicho</a></li>
-                  <li class="filtertype"><a href="" id="veneno">veneno</a></li>
-                  <li class="filtertype"><a href="" id="hada">hada</a></li>
-                  <li class="filtertype"><a href="" id="dragon">dragon</adragon</li>
-                  <li class="filtertype"><a href="" id="acero">acero</a></li>
-                  <li class="filtertype"><a href="" id="lucha">lucha</a></li>
+                  <li id="filtertype" value="electric"><a href="" id="electrico">electrico</a></li>
+                  <li id="filtertype" value="normal"><a href="" id="normal">normal</a></li>
+                  <li id="filtertype" value="fire"><a href="" id="fuego">fuego</a></li>
+                  <li id="filtertype" value="water"><a href="" id="agua">agua</a></li>
+                  <li id="filtertype" value="ice"><a href="" id="hielo">hielo</a></li>
+                  <li id="filtertype" value="rock"><a href="" id="roca">roca</a></li>
+                  <li id="filtertype" value="flying"><a href="" id="volador">volador</a></li>
+                  <li id="filtertype" value="grass"><a href="" id="planta">planta</a></li>
+                  <li id="filtertype" value="psyquic"><a href="" id="psiquico">psiquico</a></li>
+                  <li id="filtertype" value="ghost"><a href="" id="fanstasma">fanstasma</a></li>
+                  <li id="filtertype" value="bug"><a href="" id="bicho">bicho</a></li>
+                  <li id="filtertype" value="poison"><a href="" id="veneno">veneno</a></li>
+                  <li id="filtertype" value="fairy"><a href="" id="hada">hada</a></li>
+                  <li id="filtertype" value="dragon"><a href="" id="dragon">dragon</adragon</li>
+                  <li id="filtertype" value="steel"><a href="" id="acero">acero</a></li>
+                  <li id="filtertype" value="fighting"><a href="" id="lucha">lucha</a></li>
               </ul>
          </ul>
       </div>
