--- a/src/index.html
+++ b/src/index.html
@@ -33,22 +33,22 @@
         <ul>
            <li id="filtrarPokemonesBtn"><i class="fa-solid fa-filter" > Filtrar <i class="fa-solid fa-angle-down"></i></i> </li>
               <ul class="submenu" id="submenu">  
-                  <li ><a href="" id="filtertype" value="electric">electrico</a></li>
-                  <li ><a href="" id="filtertype" value="normal">normal</a></li>
-                  <li ><a href="" id="filtertype" value="fire">fuego</a></li>
-                  <li ><a href="" id="filtertype" value="water">agua</a></li>
-                  <li ><a href="" id="filtertype" value="ice">hielo</a></li>
-                  <li ><a href="" id="filtertype" value="rock">roca</a></li>
-                  <li ><a href="" id="filtertype" value="flying">volador</a></li>
-                  <li ><a href="" id="filtertype" value="grass">planta</a></li>
-                  <li ><a href="" id="filtertype" value="psychic">psiquico</a></li>
-                  <li ><a href="" id="filtertype" value="ghost">fanstasma</a></li>
-                  <li ><a href="" id="filtertype" value="bug">bicho</a></li>
-                  <li ><a href="" id="filtertype" value="poison">veneno</a></li>
-                  <li ><a href="" id="filtertype" value="fairy">hada</a></li>
-                  <li ><a href="" id="filtertype" value="dragon">dragon</adragon</li>
-                  <li ><a href="" id="filtertype" value="steel">acero</a></li>
-                  <li ><a href="" id="filtertype" value="fighting">lucha</a></li>
+                  <li class="filtertype" value="electric" ><a href="" >electrico</a></li>
+                  <li class="filtertype" value="normal"><a href="" >normal</a></li>
+                  <li class="filtertype" value="fire"><a href="" >fuego</a></li>
+                  <li class="filtertype" value="water"><a href="" >agua</a></li>
+                  <li class="filtertype" value="ice"><a href="" >hielo</a></li>
+                  <li class="filtertype" value="rock"><a href="" >roca</a></li>
+                  <li class="filtertype" value="flying"><a href="" >volador</a></li>
+                  <li class="filtertype" value="grass"><a href="" >planta</a></li>
+                  <li class="filtertype" value="psychic"><a href="" >psiquico</a></li>
+                  <li class="filtertype" value="ghost"><a href="" >fanstasma</a></li>
+                  <li class="filtertype" value="bug"><a href="" >bicho</a></li>
+                  <li class="filtertype" value="poison"><a href="" >veneno</a></li>
+                  <li class="filtertype" value="fairy"><a href="" >hada</a></li>
+                  <li class="filtertype" value="dragon"><a href="" >dragon</a></li>
+                  <li class="filtertype" value="steel"><a href="" >acero</a></li>
+                  <li class="filtertype" value="fighting"><a href="" >lucha</a></li>
               </ul>
          </ul>
       </div>
