--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
         <button type="button" id="btnSearch" ><img src="/images/pokebola01.png"></button>
       </form>
 
-      <form>
-        <button type="button" id="btnRefresh"><img src="/images/refrescar.png"></button>
-      </form>
+      <section>
+        <button type="button" id="btnRefresh" class="btnRefresh"><img src="/images/vector.png">REGRESAR</button>
+      </section>
       
       
     </div>
