--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
         <ul>
            <li id="filtrarPokemonesBtn"><i class="fa-solid fa-filter" > Filtrar <i class="fa-solid fa-angle-down"></i></i> </li>
               <ul class="submenu" id="submenu">  
-                  <li class="filtertype" value="electric" ><a href="" >electrico</a></li>
-                  <li class="filtertype" value="normal"><a href="" >normal</a></li>
+                  <li class="filtertype" value="electric" ><a id="electric" href="" >electrico</a></li>
+                  <li class="filtertype" value="normal"><a href="" id="normal" >normal</a></li>
                   <li class="filtertype" value="fire"><a href="" >fuego</a></li>
                   <li class="filtertype" value="water"><a href="" >agua</a></li>
                   <li class="filtertype" value="ice"><a href="" >hielo</a></li>
