--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,9 @@
          <i class="fa-solid fa-arrow-up-z-a" id="ordenDescen"> Ordenar Z-A</i>
        </div>
      </nav>
+     <div id="message"> 
+      <p id="messageEstadistic"> </p>
+     </div>
     
      <div id="containerPokemon" class="containerPokemon" >
       
